// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/members/list/components/body specs should render as expected when passing more than one item  1`] = `
<tbody
  className="list-items"
>
  <Component
    key="1"
    member={
      Object {
        "avatarUrl": "url test",
        "id": 1,
        "name": "name test",
      }
    }
  />
  <Component
    key="2"
    member={
      Object {
        "avatarUrl": "url test 2",
        "id": 2,
        "name": "name test 2",
      }
    }
  />
</tbody>
`;

exports[`pages/members/list/components/body specs should render as expected when passing one item 1`] = `
<tbody
  className="list-items"
>
  <Component
    key="1"
    member={
      Object {
        "avatarUrl": "url test",
        "id": 1,
        "name": "name test",
      }
    }
  />
</tbody>
`;
